--- a/contactus.html
+++ b/contactus.html
@@ -65,7 +65,7 @@
         <div class="space"></div>
       </div>
       <div class="row">
-        <a title="map" href="https://www.google.com.sg/maps/place/Blk+437A/@1.3581812,103.7367346,17z/data=!3m1!4b1!4m6!3m5!1s0x31da1109c9ce5fbb:0x4a214255008f8c84!8m2!3d1.3581758!4d103.7393095!16s%2Fg%2F11g22tc2pd?entry=ttu" target="_blank"><img class="img-fluid" src="images/aslmap.jpg"></a>
+        <a title="map" href="https://www.google.com.sg/maps/place/Singapore+658071/@1.3373498,103.7545718,15.75z/data=!4m6!3m5!1s0x31da106dadea51d9:0x79ff27d1e4239b7c!8m2!3d1.338724!4d103.755811!16s%2Fg%2F1tdgrxsv?entry=ttu&g_ep=EgoyMDI0MTAyMC4xIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="img-fluid" src="images/aslmap.jpg"></a>
       </div>
       <br/>
       <div class="row pt-lg-3 pb-lg-3 m-lg-0">
