--- a/product.html
+++ b/product.html
@@ -75,7 +75,7 @@
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabEngine">
               <div class="row">
                 <div class="image-box">
-                  <a href="detail.html"><img class="img-fluid" src="images/Launtop-Diesel-Enigne-LA170FA-1.jpg" alt="sink"></a>
+                  <a href="detail.html?SKU=LAUN-LA170FA"><img class="img-fluid" src="images/Launtop-Diesel-Enigne-LA170FA-1.jpg" alt="sink"></a>
                 </div>
               </div>
               <p>Diesel Engine</p>
@@ -83,7 +83,7 @@
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
               <div class="row">
                 <div class="image-box">
-                  <img class="img-fluid" src="images/Launtop-LDG6500CLE-1.jpg" alt="sink">
+                  <a href="detail.html?SKU=LAUN-LDG6500CL"><img class="img-fluid" src="images/Launtop-LDG6500CLE-1.jpg" alt="sink"></a>
                 </div>
               </div>
               <p>Diesel Generator</p>
