--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="minheight80">
             <h4 class="text-center">Diesel Engine</h4>
           </div>
-          <div class="text-center"><a title="product" href="detail.html" class="btn btn-asl">SHOP NOW</a></div>
+          <div class="text-center"><a title="product" href="detail.html?SKU=LAUN-LA170FA" class="btn btn-asl">SHOP NOW</a></div>
         </div>
         <div class="col-sm-6 col-md-4 isotope-item">
           <div class="row"><div class="col-sm-2"></div><div class="col-sm-8">
@@ -118,7 +118,7 @@
           <div class="minheight80">
             <h4 class="text-center">Diesel Generator</h4>
           </div>
-          <div class="text-center"><a title="product" href="detail.html" class="btn btn-asl">SHOP NOW</a></div>
+          <div class="text-center"><a title="product" href="detail.html?SKU=LAUN-LDG6500CL" class="btn btn-asl">SHOP NOW</a></div>
         </div>
         <div class="col-sm-6 col-md-4 isotope-item">
           <div class="row"><div class="col-sm-2"></div><div class="col-sm-8">
@@ -131,7 +131,7 @@
           <div class="minheight80">
             <h4 class="text-center">Pendulum Concrete Vibrator</h4>
           </div>
-          <div class="text-center"><a title="product" href="detail.html" class="btn btn-asl">SHOP NOW</a></div>
+          <div class="text-center"><a title="product" href="detail.html?SKU=singa-sg28x6m" class="btn btn-asl">SHOP NOW</a></div>
         </div>
   
       </div>
@@ -148,13 +148,13 @@
         <div class="col-sm-6 col-md-4 isotope-item">
           <div class="row"><div class="col-sm-2"></div><div class="col-sm-8">
             <div class="image-box">
-              <img class="img-fluid" src="images/img1.png" alt="sink">
+              <img class="img-fluid" src="images/340AJ_Extended_Rear_LF_SILO_390x547.jpg" alt="sink">
             </div>
           </div><div class="col-sm-2"></div></div>
           
           <br/>
           <div>
-            <h4 class="text-center">Air Compressor & Dryer</h4>
+            <h4 class="text-center">Articulating Boom Lift</h4>
           </div>
           
         </div>
@@ -184,7 +184,7 @@
         </div>
   
       </div>
-      <div class="row"><div class="col-sm-10"></div><div class="col-sm-2 text-center"><a title="product" href="product.html" class="btn btn-asl">CHECK MORE</a></div></div>
+      <div class="row"><div class="col-sm-10"></div><div class="col-sm-2 text-center"><a title="product" href="rental.html" class="btn btn-asl">CHECK MORE</a></div></div>
     </div>
   </div>
 
