--- a/product.html
+++ b/product.html
@@ -73,28 +73,44 @@
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabEngine">
-              <div class="row">
-                <div class="image-box">
-                  <a href="detail.html?SKU=LAUN-LA170FA"><img class="img-fluid" src="images/Launtop-Diesel-Enigne-LA170FA-1.jpg" alt="sink"></a>
+              <a href="detail.html?SKU=LAUN-LA170FA">
+                <div class="card">
+                  <img class="card-img-top" src="images/Launtop-Diesel-Enigne-LA170FA-1.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Diesel Engine</h5></div>
                 </div>
-              </div>
-              <p>Diesel Engine</p>
+              </a>
             </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
-              <div class="row">
-                <div class="image-box">
-                  <a href="detail.html?SKU=LAUN-LDG6500CL"><img class="img-fluid" src="images/Launtop-LDG6500CLE-1.jpg" alt="sink"></a>
+              <a href="detail.html?SKU=LAUN-LDG6500CL">
+                <div class="card">
+                  <img class="card-img-top" src="images/Launtop-LDG6500CLE-1.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Diesel Generator</h5></div>
                 </div>
-              </div>
-              <p>Diesel Generator</p>
+              </a>
             </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll">
-              <div class="row">
-                <div class="image-box">
-                  <img class="img-fluid" src="images/Singa-Pendulum-Concrete-Vibrator.jpg" alt="sink">
+              <a href="detail.html?SKU=singa-sg28x6m">
+                <div class="card">
+                  <img class="card-img-top" src="images/Singa-Pendulum-Concrete-Vibrator.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Pendulum Concrete Vibrator</h5></div>
                 </div>
-              </div>
-              <p>Pendulum Concrete Vibrator</p>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=FUJI-FCC150LA186">
+                <div class="card">
+                  <img class="card-img-top" src="images/FUJI-FCC150LA186.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Asphalt & Concrete Cutter</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=FBB32-RD90N">
+                <div class="card">
+                  <img class="card-img-top" src="images/FBB32-RD90N.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Steel Bar Bender</h5></div>
+                </div>
+              </a>
             </div>
       
           </div>
