--- a/rental.html
+++ b/rental.html
@@ -69,6 +69,7 @@
           <button class="tablinks" id="tabAll">All</button>
           <button class="tablinks" id="tabBoomLift">Boom Lift</button>
           <button class="tablinks" id="tabScissorLift">Scissor Lift</button>
+          <button class="tablinks" id="tabForklift">Forklift</button>
         </div>
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
@@ -85,6 +86,22 @@
                 <div class="card">
                   <img class="card-img-top" src="images/460SJ-product-silo.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Telescopic Boom Lift</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabScissorLift">
+              <a href="detailrental.html?SKU=JLG-ES1530L">
+                <div class="card">
+                  <img class="card-img-top" src="images/JLG-ES1530L-1233x925.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Scissor Lift</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabForklift">
+              <a href="detailrental.html?SKU=Lonking-LG30dt">
+                <div class="card">
+                  <img class="card-img-top" src="images/Lonking-LG30dt.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Forklift</h5></div>
                 </div>
               </a>
             </div>
