--- a/contactus.html
+++ b/contactus.html
@@ -75,7 +75,7 @@
         
         <div align="center" class="col-lg-4 col-sm-12 col-4 pt-lg-3 "><i class="fa fa-fax fa-2x colored"></i> <span><strong>FAX NO.:</strong> +(65) 6569 7202</span></div>
         
-        <div align="center" class="col-lg-4 col-sm-12 col-4 pt-lg-3 "><i class="fa fa-envelope-o fa-2x colored"></i> <span><strong>EMAIL:</strong> enquiry@aslglobal.sg</span></div>
+        <div align="center" class="col-lg-4 col-sm-12 col-4 pt-lg-3 "><i class="fa fa-envelope-o fa-2x colored"></i> <span><strong>EMAIL:</strong> enquiry@aslequipment.sg</span></div>
         </div>
     </div>
   </div>
