--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <div class="col-sm-6"></div>
         <div class="col-sm-6 headertext">
           <p class="headertext1">Dedicated & Resourceful</p>
-          <p class="headertext2">ONE-STOP</p>
-          <p class="headertext3">EQUIPMENT BUY & RENTAL COMPANY</p>
+          <p class="headertext3">EQUIPMENT SALES & RENTAL COMPANY</p>
         </div>
       </div>
     
