--- a/product.html
+++ b/product.html
@@ -61,7 +61,7 @@
   <div class="ptb100">
     <div class="container">
       <div class="row">
-        <h1 class="text-center colored">Sell</h1>
+        <h1 class="text-center colored">Sales</h1>
         <div class="space"></div>
       </div>
       <div class="row">
