--- a/detailrental.html
+++ b/detailrental.html
@@ -62,7 +62,7 @@
     <!-- LAUN-LA170FA -->
     <div id="JLG-340AJ" class="container d-none">
       <div class="row">
-        <div class="col-md-6"> <img class="img-fluid" src="images/Launtop-Diesel-Enigne-LA170FA-1.jpg" alt="details"> </div>
+        <div class="col-md-6"> <img class="img-fluid" src="images/340AJ.jpg" alt="details"> </div>
         <div class="col-md-6">
           <div><h2 class="colored productname">JLG 340AJ: Articulating Boom Lift</h2></div>
           <div><p>Category: Lift</p></div>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="form-group mb-3">
                                 <!-- <button type="reset" class="btn btn-secondary ml-3"></button> -->
-                                <button class="btn btn-asl ml-3" id="inquiry_to_whatsapp_btn" value="Submit" type="submit"><i class="fab fa-whatsapp"></i>&nbsp;Send Message</button>
+                                <button class="btn btn-asl ml-3" id="inquiry_to_whatsapp_btn" value="Submit" type="submit">Send Message</button>
                                 
                             </div>
                         </div>
