--- a/product.html
+++ b/product.html
@@ -72,6 +72,14 @@
         </div>
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=fuji-premium-concrete-vibrator">
+                <div class="card">
+                  <img class="card-img-top" src="images/FUJI-Premium-Concrete-Vibrator.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Concrete Vibrator</h5></div>
+                </div>
+              </a>
+            </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabEngine">
               <a href="detail.html?SKU=LAUN-LA170FA">
                 <div class="card">
@@ -88,19 +96,12 @@
                 </div>
               </a>
             </div>
+            
             <div class="col-sm-6 col-md-4 isotope-item tabAll">
-              <a href="detail.html?SKU=singa-sg28x6m">
+              <a href="detail.html?SKU=lighting-tower">
                 <div class="card">
-                  <img class="card-img-top" src="images/Singa-Pendulum-Concrete-Vibrator.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Pendulum Concrete Vibrator</h5></div>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-6 col-md-4 isotope-item tabAll">
-              <a href="detail.html?SKU=FUJI-FCC150LA186">
-                <div class="card">
-                  <img class="card-img-top" src="images/FUJI-FCC150LA186.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Asphalt & Concrete Cutter</h5></div>
+                  <img class="card-img-top" src="images/Launtop-Lighting-Tower-LDG6000S-1.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Lighting Tower</h5></div>
                 </div>
               </a>
             </div>
