--- a/rental.html
+++ b/rental.html
@@ -76,7 +76,7 @@
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabBoomLift">
               <a href="detailrental.html?SKU=JLG-340AJ">
                 <div class="card">
-                  <img class="card-img-top" src="images/340AJ_Extended_Rear_LF_SILO_390x547.jpg" alt="item">
+                  <img class="card-img-top" src="images/340AJ.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Articulating Boom Lift</h5></div>
                 </div>
               </a>
