--- a/enquiry.html
+++ b/enquiry.html
@@ -95,7 +95,7 @@
                             </div>
                             <div class="form-group mb-3">
                                 <!-- <button type="reset" class="btn btn-secondary ml-3"></button> -->
-                                <button class="btn btn-asl ml-3" id="inquiry_to_whatsapp_btn" value="Submit" type="submit"><i class="fab fa-whatsapp"></i>&nbsp;Send Message</button>
+                                <button class="btn btn-asl ml-3" id="inquiry_to_whatsapp_btn" value="Submit" type="submit">Send Message</button>
                                 
                             </div>
                         </div>
