--- a/product.html
+++ b/product.html
@@ -106,10 +106,26 @@
               </a>
             </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll">
-              <a href="detail.html?SKU=FBB32-RD90N">
+              <a href="detail.html?SKU=plate-compactor">
                 <div class="card">
-                  <img class="card-img-top" src="images/FBB32-RD90N.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Steel Bar Bender</h5></div>
+                  <img class="card-img-top" src="images/FC80RB20AS.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Plate Compactor</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=power-trowel">
+                <div class="card">
+                  <img class="card-img-top" src="images/a-FPT436RB20AS.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Power Trowel</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=submersible-pump">
+                <div class="card">
+                  <img class="card-img-top" src="images/Quality-Submersible-Pumps.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Submersible Pump</h5></div>
                 </div>
               </a>
             </div>
