--- a/product.html
+++ b/product.html
@@ -129,6 +129,22 @@
                 </div>
               </a>
             </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=tamping-rammer">
+                <div class="card">
+                  <img class="card-img-top" src="images/fuji-tamping-rammer-2.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Tamping Rammer</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=welder-diesel-generator">
+                <div class="card">
+                  <img class="card-img-top" src="images/111153439.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Welder</h5></div>
+                </div>
+              </a>
+            </div>
       
           </div>
         </div>
