--- a/product.html
+++ b/product.html
@@ -73,6 +73,14 @@
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
             <div class="col-sm-6 col-md-4 isotope-item tabAll">
+              <a href="detail.html?SKU=AirCompressor">
+                <div class="card">
+                  <img class="card-img-top" src="images/DU-190 Air Compressor.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Air Compressor</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll">
               <a href="detail.html?SKU=fuji-premium-concrete-vibrator">
                 <div class="card">
                   <img class="card-img-top" src="images/FUJI-Premium-Concrete-Vibrator.jpg" alt="item">
@@ -93,6 +101,22 @@
                 <div class="card">
                   <img class="card-img-top" src="images/Launtop-LDG6500CLE-1.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Diesel Generator</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
+              <a href="detail.html?SKU=DLW-400LSW">
+                <div class="card">
+                  <img class="card-img-top" src="images/DLW-400LSW.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
+              <a href="detail.html?SKU=DLW-500ISW">
+                <div class="card">
+                  <img class="card-img-top" src="images/DLW-500ISW.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
                 </div>
               </a>
             </div>
