--- a/rental.html
+++ b/rental.html
@@ -68,16 +68,42 @@
         <div class="col-sm-2 tab">  
           <button class="tablinks" id="tabAll">All</button>
           <button class="tablinks" id="tabBoomLift">Boom Lift</button>
+          <button class="tablinks" id="tabCompressor">Compressor</button>
+          <button class="tablinks" id="tabGenerator">Generator</button>
           <button class="tablinks" id="tabScissorLift">Scissor Lift</button>
           <button class="tablinks" id="tabForklift">Forklift</button>
         </div>
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabCompressor">
+              <a href="detailrental.html?SKU=AirCompressor">
+                <div class="card">
+                  <img class="card-img-top" src="images/DU-190 Air Compressor.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Air Compressor</h5></div>
+                </div>
+              </a>
+            </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabBoomLift">
               <a href="detailrental.html?SKU=JLG-340AJ">
                 <div class="card">
                   <img class="card-img-top" src="images/340AJ.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Articulating Boom Lift</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
+              <a href="detailrental.html?SKU=DLW-400LSW">
+                <div class="card">
+                  <img class="card-img-top" src="images/DLW-400LSW.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
+              <a href="detailrental.html?SKU=DLW-500ISW">
+                <div class="card">
+                  <img class="card-img-top" src="images/DLW-500ISW.png" alt="item">
+                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
                 </div>
               </a>
             </div>
