--- a/product.html
+++ b/product.html
@@ -71,6 +71,7 @@
           <button class="tablinks" id="tabCompressor">Compressor</button>
           <button class="tablinks" id="tabEngine">Engine</button>
           <button class="tablinks" id="tabGenerator">Generator</button>
+          <button class="tablinks" id="tabGrinding">Grinding</button>
           <button class="tablinks" id="tabLighting">Lighting</button>
           <button class="tablinks" id="tabPump">Pump</button>
           <button class="tablinks" id="tabRammer">Rammer</button>
@@ -110,6 +111,14 @@
                 <div class="card">
                   <img class="card-img-top" src="images/Launtop-LDG6500CLE-1.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Diesel Generator</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGrinding">
+              <a href="detail.html?SKU=FloorGrinding">
+                <div class="card">
+                  <img class="card-img-top" src="images/FloorGrindingMachine.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Floor Grinding</h5></div>
                 </div>
               </a>
             </div>
