--- a/rental.html
+++ b/rental.html
@@ -70,6 +70,7 @@
           <button class="tablinks" id="tabBoomLift">Boom Lift</button>
           <button class="tablinks" id="tabCompressor">Compressor</button>
           <button class="tablinks" id="tabGenerator">Generator</button>
+          <button class="tablinks" id="tabGrinding">Grinding</button>
           <button class="tablinks" id="tabScissorLift">Scissor Lift</button>
           <button class="tablinks" id="tabForklift">Forklift</button>
         </div>
@@ -88,6 +89,14 @@
                 <div class="card">
                   <img class="card-img-top" src="images/340AJ.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Articulating Boom Lift</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGrinding">
+              <a href="detailrental.html?SKU=FloorGrinding">
+                <div class="card">
+                  <img class="card-img-top" src="images/FloorGrindingMachine.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Floor Grinding</h5></div>
                 </div>
               </a>
             </div>
