--- a/rental.html
+++ b/rental.html
@@ -40,7 +40,7 @@
   <!-- Header -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand abs" href="index.html"><img class="logoimage" src="images/asl-logolong.png" alt="logo" /></a>
+        <a class="navbar-brand abs" href="index.html"><img class="logoimage" src="images/asl-logolong3.png" alt="logo" /></a>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
