--- a/contactus.html
+++ b/contactus.html
@@ -66,7 +66,7 @@
         <div class="space"></div>
       </div>
       <div class="row">
-        <a title="map" href="https://www.google.com.sg/maps/place/Singapore+658071/@1.3373498,103.7545718,15.75z/data=!4m6!3m5!1s0x31da106dadea51d9:0x79ff27d1e4239b7c!8m2!3d1.338724!4d103.755811!16s%2Fg%2F1tdgrxsv?entry=ttu&g_ep=EgoyMDI0MTAyMC4xIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="img-fluid" src="images/aslmap.jpg"></a>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15954.918541306515!2d103.73723136318411!3d1.3385113830414606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da106db2c46059%3A0xaa68aa046fe6baee!2s71%20Bukit%20Batok%20Cres%2C%20Singapore%20658071!5e0!3m2!1sen!2ssg!4v1734509700604!5m2!1sen!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <br/>
       <div class="row pt-lg-3 pb-lg-3 m-lg-0">
