--- a/detail.html
+++ b/detail.html
@@ -962,7 +962,7 @@
           <br/>
           <div>
             <div class="woocommerce-product-details__short-description">
-              <p>Features:-</p>
+              <p>Features:</p>
             <ul>
             <li>Specifically designed for ROBIN EH12-2D 4-Stroke Petrol Engine. No more 2-T oil.</li>
             <li>Build to withstand RAMMER vibration for improved reliability and durability. A heavy duty throttle control provides more reliable and longer service.</li>
