--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-5 headertext">
-          <p class="headertext1">Dedicated & Resourceful</p>
+          <p class="headertext1">DEDICATED & RESOURCEFUL</p>
           <p class="headertext3">EQUIPMENT SALES & RENTAL COMPANY</p>
         </div>
         <div class="col-sm-3"></div>
