--- a/detailrental.html
+++ b/detailrental.html
@@ -211,7 +211,7 @@
       <div class="row">
         <div class="col-md-6"> <img class="img-fluid" src="images/DLW-400LSW.jpg" alt="details"> </div>
         <div class="col-md-6">
-          <div><h2 class="colored productname">Generator DLW-400LSW</h2></div>
+          <div><h2 class="colored productname">Welder DLW-400LSW</h2></div>
           <div>
             <a title="whatsapp" href="https://api.whatsapp.com/send?phone=6590671147&text=Hello" class="btn btn-asl">WhatsApp Us</a>
             <a title="enquiry" href="#enquiry" class="btn btn-asl">Enquire Now</a>
@@ -283,14 +283,21 @@
       
     </div>
 
-    <div id="DLW-500ISW" class="container d-none">
+    <div id="DCA-60ESI2" class="container d-none">
       <div class="row">
-        <div class="col-md-6"> <img class="img-fluid" src="images/DLW-500ISW.jpg" alt="details"> </div>
+        <div class="col-md-6"> <img class="img-fluid" src="images/DCA-60ESI2.jpg" alt="details"> </div>
         <div class="col-md-6">
-          <div><h2 class="colored productname">Generator DLW-500ISW</h2></div>
+          <div><h2 class="colored productname">Generator</h2></div>
           <div>
             <a title="whatsapp" href="https://api.whatsapp.com/send?phone=6590671147&text=Hello" class="btn btn-asl">WhatsApp Us</a>
             <a title="enquiry" href="#enquiry" class="btn btn-asl">Enquire Now</a>
+          </div>
+          <br/>
+          <div>
+            <div class="woocommerce-product-details__short-description">
+              <p dir="ltr"><span>The DENYO DCA Series of&nbsp;</span>diesel generators are powerful and quiet. Capable of providing power at various sites, including civil work and construction sites, as well as emergency power for critical equipment, including hospitals, industries where refrigeration is required, construction and mining operations.</p>
+              <p>They are true heavy-duty performance generators with a range of key features including extremely quiet operation, user-friendly with simplified maintenance, easy to transport and fully appointed control panels.&nbsp;Blue Diamond’s range of Denyo Diesel Generators are reliable, efficient and high performing.&nbsp;</p>
+            </div>
           </div>
         </div>
       </div>
@@ -302,64 +309,100 @@
         <table class="table table-bordered table-striped" border="1" cellspacing="0" cellpadding="2">
           <tbody>
             <tr>
-                <th>Current Range 50Hz/60Hz</th>
-                <td>Single: 60~480/60~500A; Dual: 30~240/30~250A</td>
+                <th>Alternator Frequency Hz</th>
+                <td>50 / 60</td>
             </tr>
             <tr>
-                <th>Duty Cycle</th>
-                <td>60%</td>
+                <th>Alternator Output Rating (kVA)</th>
+                <td>Continuous - 50 / 60, Standby - 55 / 66</td>
             </tr>
             <tr>
-                <th>Rated Current 50Hz/60Hz</th>
-                <td>450, 480</td>
+                <th>Alternator No. Of Phases</th>
+                <td>3-Phase, 4-Wire</td>
             </tr>
             <tr>
-                <th>Rated Output 50Hz/60Hz</th>
-                <td>CC:17.1/ CV:16.4; CC:18.8/ CV:18.2</td>
+                <th>Alternator Rated Voltage V</th>
+                <td>2 Dual Voltage</td>
             </tr>
             <tr>
-                <th>Rated Voltage 50Hz/60Hz</th>
-                <td>CC:38.0/ CV36.5; CC:39.2/ CV:38.0 </td>
+                <th>Alternator Power Factor</th>
+                <td>0.8</td>
             </tr>
             <tr>
-                <th>Engine Model</th>
-                <td>Kubota V1505-K3B</td>
+                <th>Alternator Voltage Regulation %</th>
+                <td>Within ± 1.5</td>
+            </tr>
+            <tr>
+                <th>Alternator Excitation</th>
+                <td>Brushless, Rotating, Exciter (With A.V.R)</td>
+            </tr>
+            <tr>
+                <th>Alternator Insulation</th>
+                <td>Class H</td>
+            </tr>
+            <tr>
+                <th>Engine Make &amp; Model</th>
+                <td>Isuzu BB-4BG1T</td>
             </tr>
             <tr>
                 <th>Engine Type</th>
-                <td>Water-cooled diesel engine</td>
+                <td>Inlined, Direct Injected, Turbocharge</td>
             </tr>
             <tr>
-                <th>Engine Rated Output</th>
-                <td>24.6kW /3000min<sup>-1</sup>, 27.1kW /3600min<sup>-1</sup></td>
+                <th>Engine Output Rating kW/min⁻¹</th>
+                <td>47.9/1500 / 57.1/1800</td>
             </tr>
             <tr>
-                <th>Engine Battery</th>
-                <td>80D26R × 1</td>
+                <th>Engine No. of cylinders-Bore x Stroke mm</th>
+                <td>4 - 105 x 125</td>
             </tr>
             <tr>
-                <th>Displacement</th>
-                <td>1.498L</td>
+                <th>Engine Piston Displacement L</th>
+                <td>4.329</td>
             </tr>
             <tr>
-                <th>Fuel</th>
-                <td>ASTM No. 2 diesel fuel or equivalent</td>
+                <th>Engine Fuel</th>
+                <td>ASTM No. 2 Diesel Fuel or Equivalent</td>
             </tr>
             <tr>
-                <th>Fuel Consumption (l/h)</th>
-                <td>2.14/2.49L/hr.</td>
+                <th>Engine Fuel consumption*2  L/h</th>
+                <td>8.7 / 11.0</td>
             </tr>
             <tr>
-                <th>Fuel Tank Capacity</th>
-                <td>56L</td>
+                <th>Lube Oil Sump Capacity L</th>
+                <td>13.2</td>
             </tr>
             <tr>
-                <th>Dimensions (L × W × H)</th>
-                <td>1550 x 800 x 885 mm</td>
+                <th>Engine Coolant Capacity L</th>
+                <td>15.4</td>
             </tr>
             <tr>
-                <th>Dry Weight KG</th>
-                <td>542kg</td>
+                <th>Engine Battery × Quantity </th>
+                <td>120E41Rx1</td>
+            </tr>
+            <tr>
+                <th>Engine Fuel Tank Capacity L</th>
+                <td>125</td>
+            </tr>
+            <tr>
+                <th>Length  mm</th>
+                <td>2200</td>
+            </tr>
+            <tr>
+                <th>Width   mm</th>
+                <td>880</td>
+            </tr>
+            <tr>
+                <th>Height  mm</th>
+                <td>1250</td>
+            </tr>
+            <tr>
+                <th>Dry Weight (Full Weight) kg</th>
+                <td>1120</td>
+            </tr>
+            <tr>
+                <th>Sound Level 7m dB (A) 1500/1800 rpm (min⁻¹)*4</th>
+                <td>61.0 / 64.0</td>
             </tr>
             </tbody>
         </table>			</div>
