--- a/product.html
+++ b/product.html
@@ -70,14 +70,18 @@
           <div class="row"><a class="btn tablinks" id="tabAll">All</a></div>
           <div class="row"><a class="btn tablinks" id="tabCompactor">Compactor</a></div>
           <div class="row"><a class="btn tablinks" id="tabCompressor">Compressor</a></div>
+          <div class="row"><a class="btn tablinks" id="tabConcreteCutter">Concrete Cutter</a></div>
           <div class="row"><a class="btn tablinks" id="tabEngine">Engine</a></div>
           <div class="row"><a class="btn tablinks" id="tabGenerator">Generator</a></div>
           <div class="row"><a class="btn tablinks" id="tabGrinding">Grinding</a></div>
+          <div class="row"><a class="btn tablinks" id="tabGroutPump">Grout Pump</a></div>
           <div class="row"><a class="btn tablinks" id="tabLighting">Lighting</a></div>
           <div class="row"><a class="btn tablinks" id="tabPump">Pump</a></div>
           <div class="row"><a class="btn tablinks" id="tabRammer">Rammer</a></div>
+          <div class="row"><a class="btn tablinks" id="tabSpraying">Spraying</a></div>
           <div class="row"><a class="btn tablinks" id="tabTrowel">Trowel</a></div>
           <div class="row"><a class="btn tablinks" id="tabVibrator">Vibrator</a></div>
+          <div class="row"><a class="btn tablinks" id="tabWasher">Washer</a></div>
           <div class="row"><a class="btn tablinks" id="tabWelder">Welder</a></div>
           
         </div>
@@ -88,6 +92,22 @@
                 <div class="card">
                   <img class="card-img-top" src="images/DU-190 Air Compressor.png" alt="item">
                   <div class="card-body"><h5 class="card-title">Air Compressor</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabSpraying">
+              <a href="detail.html?SKU=F13">
+                <div class="card">
+                  <img class="card-img-top" src="images/F13.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Cement Mortar Spraying</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabConcreteCutter">
+              <a href="detail.html?SKU=CC500">
+                <div class="card">
+                  <img class="card-img-top" src="images/CC500.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Concrete Cutter</h5></div>
                 </div>
               </a>
             </div>
@@ -123,19 +143,28 @@
                 </div>
               </a>
             </div>
+            
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
-              <a href="detail.html?SKU=DLW-400LSW">
+              <a href="detail.html?SKU=DCA-60ESI2">
                 <div class="card">
-                  <img class="card-img-top" src="images/DLW-400LSW.jpg" alt="item">
+                  <img class="card-img-top" src="images/DCA-60ESI2.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Generator</h5></div>
                 </div>
               </a>
             </div>
-            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
-              <a href="detail.html?SKU=DLW-500ISW">
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGroutPump">
+              <a href="detail.html?SKU=GP3">
                 <div class="card">
-                  <img class="card-img-top" src="images/DLW-500ISW.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
+                  <img class="card-img-top" src="images/GP3.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Grout Pump</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabWasher">
+              <a href="detail.html?SKU=FussenFSESeries">
+                <div class="card">
+                  <img class="card-img-top" src="images/FussenFSESeries.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">High Pressure Washer</h5></div>
                 </div>
               </a>
             </div>
@@ -177,6 +206,14 @@
                 <div class="card">
                   <img class="card-img-top" src="images/fuji-tamping-rammer-2.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Tamping Rammer</h5></div>
+                </div>
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabWelder">
+              <a href="detail.html?SKU=DLW-400LSW">
+                <div class="card">
+                  <img class="card-img-top" src="images/DLW-400LSW.jpg" alt="item">
+                  <div class="card-body"><h5 class="card-title">Welder</h5></div>
                 </div>
               </a>
             </div>
