--- a/rental.html
+++ b/rental.html
@@ -74,6 +74,7 @@
           <div class="row"><a class="btn tablinks" id="tabGrinding">Grinding</a></div>
           <div class="row"><a class="btn tablinks" id="tabScissorLift">Scissor Lift</a></div>
           <div class="row"><a class="btn tablinks" id="tabForklift">Forklift</a></div>
+          <div class="row"><a class="btn tablinks" id="tabWelder">Welder</a></div>
         </div>
         <div class="col-sm-10 tabcontent">  
           <div id="productlist" class="isotope-container row grid-space-20">
@@ -101,18 +102,18 @@
                 </div>
               </a>
             </div>
-            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabWelder">
               <a href="detailrental.html?SKU=DLW-400LSW">
                 <div class="card">
                   <img class="card-img-top" src="images/DLW-400LSW.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Generator</h5></div>
+                  <div class="card-body"><h5 class="card-title">Welder</h5></div>
                 </div>
               </a>
             </div>
             <div class="col-sm-6 col-md-4 isotope-item tabAll tabGenerator">
-              <a href="detailrental.html?SKU=DLW-500ISW">
+              <a href="detailrental.html?SKU=DCA-60ESI2">
                 <div class="card">
-                  <img class="card-img-top" src="images/DLW-500ISW.jpg" alt="item">
+                  <img class="card-img-top" src="images/DCA-60ESI2.jpg" alt="item">
                   <div class="card-body"><h5 class="card-title">Generator</h5></div>
                 </div>
               </a>
