--- a/index.html
+++ b/index.html
@@ -60,16 +60,47 @@
 
   <!-- ==== HEADERWRAP ==== -->
   <div id="headerwrap">
-    
-      <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-5 headertext">
-          <p class="headertext1">DEDICATED & RESOURCEFUL</p>
-          <p class="headertext3">EQUIPMENT SALES & RENTAL COMPANY</p>
-        </div>
-        <div class="col-sm-3"></div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
       </div>
-    
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/aslbanner2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20250123-WA0006.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20250123-WA0019.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20250123-WA0005.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20250123-WA0012.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   
   <!-- /headerwrap --> 
