--- a/detail.html
+++ b/detail.html
@@ -1407,7 +1407,7 @@
       <div class="row">
         <div class="col-md-6"> <img class="img-fluid" src="images/111153439.jpg" alt="details"> </div>
         <div class="col-md-6">
-          <div><h2 class="colored productname">Welder Diesel Generator</h2></div>
+          <div><h2 class="colored productname">Diesel Welder Generator</h2></div>
           <div>
             <a title="whatsapp" href="https://api.whatsapp.com/send?phone=6590671147&text=Hello" class="btn btn-asl">WhatsApp Us</a>
             <a title="enquiry" href="#enquiry" class="btn btn-asl">Enquire Now</a>
