--- a/product.html
+++ b/product.html
@@ -221,7 +221,7 @@
               <a href="detail.html?SKU=welder-diesel-generator">
                 <div class="card">
                   <img class="card-img-top" src="images/111153439.jpg" alt="item">
-                  <div class="card-body"><h5 class="card-title">Welder</h5></div>
+                  <div class="card-body"><h5 class="card-title">Diesel Welder Generator</h5></div>
                 </div>
               </a>
             </div>
