--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/IMG-20250123-WA0005.jpg" class="d-block w-100" alt="...">
+          <img src="images/combinedbanner1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <p class="headertext1">DEDICATED & RESOURCEFUL <br/>EQUIPMENT SALES & RENTAL COMPANY</p>
           </div>
