--- a/product.html
+++ b/product.html
@@ -71,17 +71,16 @@
           <div class="row"><a class="btn tablinks" id="tabCompactor">Compactor</a></div>
           <div class="row"><a class="btn tablinks" id="tabCompressor">Compressor</a></div>
           <div class="row"><a class="btn tablinks" id="tabConcreteCutter">Concrete Cutter</a></div>
-          <div class="row"><a class="btn tablinks" id="tabEngine">Engine</a></div>
+          <div class="row"><a class="btn tablinks" id="tabEngine">Diesel Engine</a></div>
           <div class="row"><a class="btn tablinks" id="tabGenerator">Generator</a></div>
           <div class="row"><a class="btn tablinks" id="tabGrinding">Grinding</a></div>
           <div class="row"><a class="btn tablinks" id="tabGroutPump">Grout Pump</a></div>
+          <div class="row"><a class="btn tablinks" id="tabWasher">High Pressure Washer</a></div>
           <div class="row"><a class="btn tablinks" id="tabLighting">Lighting</a></div>
-          <div class="row"><a class="btn tablinks" id="tabPump">Pump</a></div>
+          <div class="row"><a class="btn tablinks" id="tabTrowel">Power Trowel</a></div>
           <div class="row"><a class="btn tablinks" id="tabRammer">Rammer</a></div>
-          <div class="row"><a class="btn tablinks" id="tabSpraying">Spraying</a></div>
-          <div class="row"><a class="btn tablinks" id="tabTrowel">Trowel</a></div>
+          <div class="row"><a class="btn tablinks" id="tabPump">Submersible Pump</a></div>
           <div class="row"><a class="btn tablinks" id="tabVibrator">Vibrator</a></div>
-          <div class="row"><a class="btn tablinks" id="tabWasher">Washer</a></div>
           <div class="row"><a class="btn tablinks" id="tabWelder">Welder</a></div>
           
         </div>
@@ -95,7 +94,7 @@
                 </div>
               </a>
             </div>
-            <div class="col-sm-6 col-md-4 isotope-item tabAll tabSpraying">
+            <div class="col-sm-6 col-md-4 isotope-item tabAll tabGroutPump">
               <a href="detail.html?SKU=F13">
                 <div class="card">
                   <img class="card-img-top" src="images/F13.jpg" alt="item">
