--- a/detailrental.html
+++ b/detailrental.html
@@ -295,8 +295,8 @@
           <br/>
           <div>
             <div class="woocommerce-product-details__short-description">
-              <p dir="ltr"><span>The DENYO DCA Series of&nbsp;</span>diesel generators are powerful and quiet. Capable of providing power at various sites, including civil work and construction sites, as well as emergency power for critical equipment, including hospitals, industries where refrigeration is required, construction and mining operations.</p>
-              <p>They are true heavy-duty performance generators with a range of key features including extremely quiet operation, user-friendly with simplified maintenance, easy to transport and fully appointed control panels.&nbsp;Blue Diamond’s range of Denyo Diesel Generators are reliable, efficient and high performing.&nbsp;</p>
+              <p dir="ltr"><span>The DCA Series of&nbsp;</span>diesel generators are powerful and quiet. Capable of providing power at various sites, including civil work and construction sites, as well as emergency power for critical equipment, including hospitals, industries where refrigeration is required, construction and mining operations.</p>
+              <p>They are true heavy-duty performance generators with a range of key features including extremely quiet operation, user-friendly with simplified maintenance, easy to transport and fully appointed control panels.&nbsp;Blue Diamond’s range of Diesel Generators are reliable, efficient and high performing.&nbsp;</p>
             </div>
           </div>
         </div>
